--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	src="https://cdn.glitch.com/6a6cb1bc-144b-46a1-aeb4-57cc61ffcf7f%2FModel4.glb?v=1589552217146"
     ios-src="https://cdn.glitch.com/6a6cb1bc-144b-46a1-aeb4-57cc61ffcf7f%2FModel4.usdz?v=1589555232118"
 				  
-                  alt="Danfoss Model One"
+                  alt="Danfoss Model Two"
                   shadow-intensity="0"
 				  preload
 				  interaction-prompt="auto"
@@ -66,7 +66,7 @@
 	<div1 id = "card">
 	<model-viewer src="https://cdn.glitch.com/6a6cb1bc-144b-46a1-aeb4-57cc61ffcf7f%2FModel4.glb?v=1589552217146"
                   ios-src="https://cdn.glitch.com/6a6cb1bc-144b-46a1-aeb4-57cc61ffcf7f%2FModel4.usdz?v=1589555232118"
-                  alt="Danfoss Model One"
+                  alt="Danfoss Model Two"
                   shadow-intensity="1"
 				  ar-scale="auto";
 				  camera-controls
